--- a/WebApiUploadImportExcel/appsettings.json
+++ b/WebApiUploadImportExcel/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=marciodeandrade;Initial Catalog=DbUploadExcel;User ID=sa;Password=Milen@08;"
+  },
   "AllowedHosts": "*"
 }
